Thu Oct  1 13:44:42 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Makefile.am:
          Removed duplicate Timer_Queuefwd.h. Thanks to Christian Ehrlicher
          <Ch dot Ehrlicher at gmx dot de> for reporting this

Thu Oct  1 12:07:42 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Extended some fuzz messages with how to fix them

Wed Sep 29 09:59:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks6.6.GNU:
          Added workaround for bug in the diab compiler. Thanks to
          Sharon Mizrahi <sharon dot mizrahi at gmail dot com> for
          reporting this

Tue Sep 28 11:40:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
          Don't convert pptx and graffle files

Tue Sep 29 06:41:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/rules.lib.GNU:
          Reverted part of the change below, it breaks the realclean

        Thu Aug 27 20:27:52 UTC 2009  Steve Huston  <shuston@riverace.com>
        * include/makeinclude/rules.lib.GNU: Fix building, installing, and
          cleaning up libs built in an ARCH build.

Mon Sep 28 17:45:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Block.h:
          Doxygen change

        * ace/CDR_Base.{h,cpp}:
          Changed consolidate to have a return value because setting the
          new size can fail. Return 0 on ok, -1 on failure. Thanks to
          Annette Wilson <awilson at raytheonvtc dot com>

Mon Sep 28 13:14:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
          Don't convert ppt files

Fri Sep 25 19:24:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget.pm:
          Don't change the start/stop time, that gives major problems
          with remote testing, the test script needs to increment the