@@ -2298,6 +2298,7 @@ Koh Onishi <k_onishi at mtj dot biglobe dot ne dot jp>
 Markus Gaugusch <markus at gaugusch dot at>
 Annette Wilson <awilson at raytheonvtc dot com>
 Sharon Mizrahi <sharon dot mizrahi at gmail dot com>
+William Glenn <wglenn at scires dot com>
 Christian Ehrlicher <Ch dot Ehrlicher at gmx dot de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
